--- a/src/components/atoms/ToggleThemeButton/style.css
+++ b/src/components/atoms/ToggleThemeButton/style.css
@@ -9,7 +9,7 @@
   height: 2.2em;
   margin: 0;
   vertical-align: top;
-  background-color: #ffffff;
+  background-color: var(--color-background);
   border: 0.15em solid var(--color-border);
   border-radius: 2em;
   outline: none;
@@ -35,7 +35,7 @@
   top: 0.2em;
   width: 1.5em;
   height: 1.5em;
-  background-color: rgb(248, 194, 15);
+  background-color: #f3a54b;
   border-radius: 50%;
   transform: translateX(0);
   transition: all 0.3s cubic-bezier(0.2, 0.85, 0.32, 1.2);
