--- a/src/components/pages/ContinuePage/style.css
+++ b/src/components/pages/ContinuePage/style.css
@@ -10,3 +10,7 @@
   display: flex;
   flex-direction: column;
 }
+
+.ContinueBlockText {
+  font-size: 1.5em;
+}
